# Render2D

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Plan.md  README.md  ReinforcementPlan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  coverage.yml  gpu.yml
bench/: CMakeLists.txt  batched_transform_bench.cpp  bench_smoke.cpp  null_cpu_bench.cpp  spatial_cull_bench.cpp  threaded_batch_bench.cpp  threaded_cpu_pipeline_bench.cpp  threaded_draw_sort_bench.cpp  threaded_text_cpu_pipeline_bench.cpp  upload_descriptor_compaction_bench.cpp
bench/support/: BenchmarkFramework.hpp
cmake/: Render2DConfig.cmake.in  Render2DDependencies.cmake
docs/: ARCHITECTURE.md  CI_SELF_HOSTED_GPU.md  MERGE_GUIDE.md  PROJECT_INDEX.md  ProjectMergeTODO.md
docs/adr/: 2026-06-08-component-first-vulkan-native-render2d.md  2026-06-09-fast-math-pod-math-types.md  2026-06-09-freetype-vendor-and-test-glyph-systems.md  2026-06-09-memorycenter-mcvector-runtime-memory.md  2026-06-09-stage10-stream-compaction-thread-command-runtime.md  2026-06-09-stage11-acquire-present-state-flow.md  2026-06-09-stage11-frame-present-deferred-destroy.md  2026-06-09-stage11-vulkan-acquire-present-runtime.md  2026-06-09-stage11-vulkan-swapchain-runtime.md  2026-06-09-stage12-sprite-gpu-instance-contract.md  2026-06-09-stage12-sprite-instance-upload-path.md  2026-06-09-stage9-text-dirty-glyph-pipeline.md  2026-06-09-text-glyph-pod-components.md  2026-06-09-threadcenter-runtime-infrastructure.md  2026-06-09-threaded-cpu-pipeline-runtime.md  2026-06-10-stage12-offscreen-sprite-render-smoke.md  2026-06-10-stage12-sprite-pipeline-descriptor-layout.md  2026-06-10-stage13-textured-sprite-sampling.md  2026-06-10-stage14-sprite-packet-material-texture-binding.md  2026-06-10-stage15-texture-atlas-uv-region.md  2026-06-11-stage16-atlas-textured-sprite-smoke.md  2026-06-11-stage18-texture-atlas-image-runtime.md  2026-06-11-stage19-text-font-pipeline.md  2026-06-12-third-party-submodules.md  2026-06-13-stage20-bindless-descriptor-indexing.md  2026-06-14-stage17-build-portability-ci.md  2026-06-14-stage17e-engine-dep-fetch.md  2026-06-14-stage21-perf-regression-gate.md  2026-06-15-fused-spatial-front-end.md  2026-06-15-stage21-parallel-deterministic-batch.md  2026-06-15-stage21-parallel-deterministic-draw-sort.md  2026-06-16-render2d-avx2-fma-build-option.md  2026-06-16-stage22-sdl3-present-host.md  2026-06-17-stage23-host-merge-readiness.md  2026-06-18-stage25-consumability-packaging.md  2026-06-19-test-ecs-asset-framework.md  2026-06-20-stage26-reproducibility-ci-release-closeout.md  2026-06-20-window-test-harness.md
docs/architecture/: BENCHMARK_BASELINE.md  ECS_COMPONENT_STREAMS.md  NATIVE_RUNTIME_CONTRACT.md  NULL_CPU_BENCHMARK.md  PROVIDER_DIM_META.md  STAGE10_PERFORMANCE_TODO.md  STAGE11_NATIVE_FRAME_TODO.md  STAGE19_TEXT_FONT_DESIGN.md  STRICT_POD_COMPONENTS.md  VULKAN_NATIVE_ONLY.md
include/Render2D/: Render2D.hpp
include/Render2D/Component/: Batch.hpp  Bounds.hpp  Camera.hpp  Command.hpp  ComponentFwd.hpp  ComponentTraits.hpp  Frame.hpp  Sprite.hpp  StrictPod.hpp  Text.hpp  Transform.hpp  Upload.hpp
include/Render2D/Core/: Result.hpp  Types.hpp  Version.hpp
include/Render2D/Font/: BidiItemizeRuntime.hpp  FontShapeRuntime.hpp  GlyphAtlasRuntime.hpp
include/Render2D/Memory/: RenderMemoryTags.hpp  RenderVector.hpp  VulkanMemoryCenterAllocator.hpp
include/Render2D/Meta/: Dim.hpp  Domain.hpp  Provider.hpp
include/Render2D/Native/: CommandRuntime.hpp  DeferredDestroyRuntime.hpp  DescriptorRuntime.hpp  DeviceRuntime.hpp  FrameRuntime.hpp  NativeComponents.hpp  NativeFwd.hpp  NativeResult.hpp  NativeTypes.hpp  PipelineRuntime.hpp  ResourceRuntime.hpp  SwapchainRuntime.hpp  VulkanBindlessCapability.hpp  VulkanBindlessTextureTable.hpp  VulkanCommandRuntime.hpp  VulkanDescriptorRuntime.hpp  VulkanPipelineRuntime.hpp  VulkanPresentRuntime.hpp  VulkanRenderEncoder.hpp  VulkanResourceRuntime.hpp  VulkanSamplerRuntime.hpp  VulkanSpriteInstanceUploadRuntime.hpp  VulkanSpriteMaterialGraph.hpp  (+8 more)
scripts/: run_coverage.sh  run_gpu_verification.ps1  run_gpu_verification.sh  run_null_cpu_benchmarks.ps1  run_threaded_cpu_benchmarks.ps1  scan_constraints.sh  verify_fetch_tier.sh
tests/: CMakeLists.txt  asset_scene_render_test.cpp  batched_transform_system_test.cpp  bidi_itemize_runtime_test.cpp  bindless_batch_system_test.cpp  bounds_system_test.cpp  command_buffer_descriptor_test.cpp  compile_smoke.cpp  cpu_system_pipeline_test.cpp  draw_sort_system_test.cpp  encode_submit_system_test.cpp  expect_compile_failure.cmake  font_shape_runtime_test.cpp  gpu_presence_gate.cpp  host_like_ecs_adapter_test.cpp  host_present_frame_smoke.cpp  mini_ecs_pipeline_test.cpp  native_command_runtime_test.cpp  native_components_test.cpp  native_deferred_destroy_runtime_test.cpp  native_resource_runtime_test.cpp  native_runtime_contract_test.cpp  native_runtime_skeleton_test.cpp  negative_non_pod_component.cpp  present_capability_gate.cpp  present_command_system_test.cpp  present_host_smoke.cpp  present_host_window_smoke.cpp  present_loop_smoke.cpp  present_renderdoc_capture_smoke.cpp  present_visible_capture_smoke.cpp  spatial_cull_system_test.cpp  sprite_instance_system_test.cpp  sprite_instance_upload_system_test.cpp  sprite_material_graph_test.cpp  sprite_pipeline_contract_test.cpp  temporary_ecs_storage_test.cpp  test_harness_test.cpp  text_glyph_components_test.cpp  text_glyph_system_test.cpp  (+32 more)
tests/packaging/: run_consumer.cmake  run_installed_consumer.cmake
tests/packaging/consumer/: CMakeLists.txt  consumer_main.cpp
tests/packaging/installed_consumer/: CMakeLists.txt
tests/support/: AssetRegistry.hpp  ComponentStreamView.hpp  EnvRequire.hpp  FullScreenTriangleShaders.hpp  HostLikeEcs.hpp  ImageFile.cpp  ImageFile.hpp  MiniEcs.hpp  PresentBringup.hpp  SpriteShaders.hpp  TemporaryEcsStorage.hpp  TestHarness.hpp  VulkanSmokeContext.hpp  WindowTestHarness.hpp
(+26 files in other folders)
